--- a/application-provider-config.yml
+++ b/application-provider-config.yml
@@ -81,7 +81,7 @@ eureka:
   client:
     service-url: #指定注册服务中心地址
       #defaultZone: http://eureka8100.com:8100/eureka,http://eureka8200.com:8200/eureka,http://eureka8300.com:8300/eureka
-      defaultZone: http://eureka8500.com:8500//eureka
+      defaultZone: http://eureka8500.com:8500/eureka
       #指定当期客户端在注册中心的名称
     #instance:
     # instance-id: abc-vince-provider-depart:8081
